writing about probability distributions

--- a/templates/chap3.tex
+++ b/templates/chap3.tex
@@ -43,9 +43,9 @@ Machine learning models generally treat data as a matrix of observations. The co
 
 \subsubsection{Density Estimation}
 
-One technique for converting a discrete set of points into a continuous field of values uses the concept of point density. The \acrlong{kde} (\acrshort{kde}) method fits a smooth function (kernel) to each point with the constraint that the volume under a kernel curve is 1.0. Density values assigned to cells of a gridded surface or raster image represent the sum over the curves crossing those cells. The kernel density tool can provide an estimate of density anywhere within the AOI, but it requires a kernel radius that sets the distance over which a point influences the density value. If left undefined, ArcGIS defaults to an optimal radius value based on a bandwidth formula \citep{esri_how_2021-3}. ArcGIS uses Silverman quartic kernels \citep{esri_how_2021-3,silverman_density_1986} as the functional basis in the \textit{Kernel Density} operation.
+One technique for converting a discrete set of points into a continuous field of values uses the concept of point density. The \acrlong{kde} (\acrshort{kde}) method fits a smooth function (kernel) to each point with the constraint that the volume under a kernel curve is 1.0. Density values assigned to cells of a gridded surface or raster image represent the sum over the curves crossing those cells. The kernel density tool can provide an estimate of density anywhere within the AOI, but it requires a kernel radius that sets the distance over which a point influences the density value. If left undefined, ArcGIS defaults to an optimal radius value based on a bandwidth formula \citep{esri_kernel_2021}. ArcGIS uses Silverman quartic kernels \citep{esri_kernel_2021,silverman_density_1986} as the functional basis in the \textit{Kernel Density} operation.
 
-Polyline data can also be fit with smooth curves using the same density concept. The maximum value of the elongate curve follows the trace of the polyline, and the curve decays in value away from the line over a distance determined by the radius, which defaults to the bandwidth estimate. One difference for line density is the volume under the curve scales with line length. For more details on the ArcGIS implementation, refer to the \textit{Density toolset} documentation on \textit{Kernel Density} \citep{esri_how_2021-3}.
+Polyline data can also be fit with smooth curves using the same density concept. The maximum value of the elongate curve follows the trace of the polyline, and the curve decays in value away from the line over a distance determined by the radius, which defaults to the bandwidth estimate. One difference for line density is the volume under the curve scales with line length. For more details on the ArcGIS implementation, refer to the \textit{Density toolset} documentation on \textit{Kernel Density} \citep{esri_kernel_2021}.
 
 \subsubsection{Surface Fitting}
 
