--- a/templates/zotero.bib
+++ b/templates/zotero.bib
@@ -1,4 +1,22 @@
 
+@misc{esri_kernel_2021,
+	title = {Kernel {Density}},
+	url = {https://pro.arcgis.com/en/pro-app/latest/tool-reference/spatial-analyst/how-kernel-density-works.htm},
+	urldate = {2021-06-17},
+	journal = {ArcGIS Pro {\textbar} Documentation},
+	author = {{ESRI}},
+	year = {2021},
+}
+
+@techreport{vose_temperature_2017,
+	address = {Washington, D.C},
+	title = {Temperature changes in the {United} {States}},
+	institution = {U.S. Global Change Research Program},
+	author = {Vose, RS and Easterling, DR and Kunkel, KE and LeGrande, AN and Wehner, MF},
+	year = {2017},
+	pages = {267--300},
+}
+
 @techreport{murphy_electrification_2021,
 	address = {Golden, CO},
 	title = {Electrification futures study: {Scenarios} of power system evolution and infrastructure development for the united states},
@@ -1068,15 +1086,6 @@ Publisher: [Cambridge, Mass.] : Energy Laboratory, Massachusetts Institute of Te
 	author = {Silverman, BW},
 	year = {1986},
 	note = {Publisher: Chapman \& Hall},
-}
-
-@misc{esri_how_2021-3,
-	title = {How {Kernel} {Density} works},
-	url = {https://pro.arcgis.com/en/pro-app/latest/tool-reference/spatial-analyst/how-kernel-density-works.htm},
-	urldate = {2021-06-17},
-	journal = {ArcGIS Pro {\textbar} Documentation},
-	author = {{ESRI}},
-	year = {2021},
 }
 
 @misc{smu_geothermal_2017,
@@ -2938,12 +2947,6 @@ Publication Title: US EIA - Short-Term Energy Outlook},
 	author = {Petty, Susan and Bour, Daniel Lee and Livesay, Billy Joe and Baria, Roy and Adair, Richard},
 	month = mar,
 	year = {2009},
-}
-
-@article{vose_temperature_2017,
-	title = {Temperature changes in the {United} {States}. {Climate} {Science} {Special} {Report}: {Fourth} {National} {Climate} {Assessment}, {DJ} {Wuebbles} et al., {Eds}., {Vol}. {I}, {US} {Global} {Change} {Research} {Program}, 185–206},
-	author = {Vose, RS and Easterling, DR and Kunkel, KE and LeGrande, AN and Wehner, MF},
-	year = {2017},
 }
 
 @article{wuebbles_climate_2017,
